--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ charset-normalizer==3.4.4
 click==8.3.0
 colorama==0.4.6
 Flask==3.1.2
+Flask-SQLAlchemy==3.1.1
+Flask-Mail==0.9.1
 gunicorn==23.0.0
 idna==3.11
 itsdangerous==2.2.0
@@ -11,5 +13,6 @@ Jinja2==3.1.6
 MarkupSafe==3.0.3
 packaging==25.0
 requests==2.32.5
+SQLAlchemy==2.0.46
 urllib3==2.5.0
 Werkzeug==3.1.3
